--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -63,6 +63,7 @@ jobs:
           npm run check
 
       - name: Auto commit if needed
+        if: ${{ github.ref_name }} == 'main'
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           file_pattern: 'lua/**/*'
