--- a/.luarc.json
+++ b/.luarc.json
@@ -1,22 +1,29 @@
 {
-  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "Lua.diagnostics.disable": [
-    "redefined-local",
-    "invisible",
-    "undefined-global"
-  ],
-  "Lua.diagnostics.globals": [
-    "vim",
-    "before_each",
-    "after_each",
-    "describe",
-    "it"
-  ],
-  "Lua.runtime": {
+  "$schema": "https://raw.githubusercontent.com/LuaLS/vscode-lua/master/setting/schema.json",
+  "diagnostics": {
+    "disable": [
+      "invisible",
+      "redefined-local",
+      "undefined-global",
+      "undefined-doc-name",
+      "undefined-doc-class"
+    ],
+    "globals": [
+      "vim",
+      "before_each",
+      "after_each",
+      "describe",
+      "it"
+    ]
+  },
+  "workspace": {
+    "checkThirdParty": false
+  },
+  "runtime": {
     "version": "LuaJIT",
     "path": [
       "lua/?.lua",
-      "lua/?/init.lua",
+      "lua/?/init.lua"
     ]
   }
 }
